# badsdltest

./: .gitignore  CMakeLists.txt  main.cpp  main_d.cpp
src/draw/: draw2d.cpp  draw2d.h
